--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@editorjs/paragraph": "^2.8.0",
     "@editorjs/quote": "^2.4.0",
     "@editorjs/simple-image": "^1.4.0",
-    "react-editor-js": "^1.9.0"
+    "react-editor-js": "^1.9.0",
+    "sass": "^1.32.8"
   }
 }
